[package]
name = "my_calc"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"
rodio = "0.17"
[profile.release]
opt-level = 'z'     # Оптимизация по размеру
lto = true          # Глубокая очистка кода
codegen-units = 1
panic = 'abort'     # Убирает лишний код обработки ошибок
strip = true        # Вырезает символы отладки (самое важное для веса)
[build-dependencies]
winres = "0.1"